# immich_sync_app

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES_SUMMARY.txt  about-summary.hbs  about.hbs  about.toml  build_test_appimage.sh  cargo-sources.json  dev.nicx.mimick.local.yml  dev.nicx.mimick.yml  install-appimage.sh  install.sh  io.github.nicx17.mimick.beta.yml  io.github.nicx17.mimick.local.yml  io.github.nicx17.mimick.yml  pyproject.toml  requirements.txt  roadmap.md  scratch.py  setup.py  uninstall-appimage.sh  uninstall.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  release-drafter.yml
docs/: APPIMAGE_CREATION.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  REPOSITORY_AUTOMATION.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: publish_wiki.sh
setup/: PKGBUILD  dev.nicx.mimick.desktop  immich-sync.desktop  immich-sync.service  io.github.nicx17.mimick.desktop  mimick.desktop  mimick.service
site/: index.html  robots.txt  sitemap.xml  styles.css
src/: __init__.py  api_client.py  api_client.rs  app_context.rs  autostart.rs  config.py  config.rs  diagnostics.rs  log_setup.py  main.py  main.rs  monitor.py  monitor.rs  notifications.py  notifications.rs  queue_manager.py  queue_manager.rs  restart.rs  runtime_env.rs  settings_main.py  settings_window.py  settings_window.rs  startup_scan.rs  state_manager.py  state_manager.rs  sync_index.rs  tray_icon.py  tray_icon.rs  utils.py  watch_path_display.rs
tests/: test_api_client.py  (+8 more)
(+29 files in other folders)
