[package]
name = "mimick"
version = "9.1.1"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.9", features = ["background", "gtk4"] }
chrono = "0.4.44"
dirs = "6.0.0"
glib = "0.22.5"
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_12"] }
ksni = "0.3.4"
lazy_static = "1.5.0"
libadwaita = { version = "0.9.1", features = ["v1_4"] }
log = "0.4.29"
notify = "8.2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "charset", "http2", "json", "multipart", "stream"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0" 
tokio = { version = "1.51.0", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "io-util", "process"] }
flexi_logger = "0.31.8"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = "z"        # Optimise for binary size (less code = less mapped pages)
codegen-units = 1      # Full whole-program optimisation
lto = true             # Link-Time Optimisation – dead code is stripped at link time
panic = "abort"        # Remove panic unwinding machinery (~60-100 KB of runtime)
strip = true           # Strip debug symbols from the final binary
